--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,13 @@ dependencies {
     implementation 'org.springframework:spring-web:5.3.29'
     implementation 'org.springframework:spring-webmvc:5.3.29'
     implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.4'
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
+    implementation 'org.springframework:spring-jdbc:5.3.27'
     testImplementation 'junit:junit:4.11'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 test {
